--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,30 @@
 body {
   margin: auto;
-  width: 960px;
+  width: 1600px;
 }
 
 path {
-  fill: #ccc;
+  fill: white;
   stroke: #000;
   stroke-width: 1.5px;
 }
 
 rect {
-	fill: #dbdbdb;
+	fill:white;
 	stroke-width: 6px;	
+}
+
+.end_item{
+	fill:#dbdbdb;
+	stroke: #44d13c;
+}
+
+svg{
+	width: 100%;
+	height: auto;
+}
+
+text{
+	font-size: 10px;
+	text-anchor: middle;
 }
